welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit = false) {
                ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit = false) {
^